--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 crispy-tailwind==0.5.0
 Django==3.1.4
 django-crispy-forms==1.14.0
+django-environ==0.9.0
 pkg_resources==0.0.0
 pytz==2022.1
 sqlparse==0.4.2
